[package]
name = "TD2"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
chrono = "0.4.42"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.28"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
